2012-01-13  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AllPlayersCard.cs:
	* TargetCardCard.cs:
	* TargetPlayerCard.cs:
	* Tequila.cs:
	* AllPlayersTableCard.cs:
	* TargetCardTableCard.cs:
	* AllPlayersGoldenCard.cs:
	* TargetCardGoldenCard.cs:
	* TargetPlayerTableCard.cs:
	* TargetPlayerGoldenCard.cs:
	  Fixed the CheckPlay() methods.
	When playing a card on self, don't check if the card has
	  effect on the target player (because it is myself, so the
	  card has always effect).

2012-01-12  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* GameCycle.cs:
	  Fixed the predraw check priority.

2012-01-12  WOnder93  <omosnacek@gmail.com>

	* Player.cs:
	* Beer.cs:
	* Saloon.cs:
	* PlayableCard.cs:
	* Whisky.cs:
	* PlayableTableCard.cs:
	* Canteen.cs:
	  Added Bang.Server.PlayableCard.CheckPlay() and
	  Bang.Server.PlayableTableCard.CheckPlayFromTable() methods
	  to enable the final card implementations to refuse the card
	  to be played.
	Removed the check for full life points when playing beer in
	  Bang.Server.Player.CheckPlayCard() as this is now covered
	  with the new methods. 

	* AssemblyInfo.cs:
	  

2012-01-05  WOnder93  <omosnacek@gmail.com>

	* ProxyCharacter.cs:
	  Fixed the ProxyCharacter's HasCardEffect() method finally.

	* AssemblyInfo.cs:
	  

2012-01-04  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Player.cs:
	* Beer.cs:
	  Fixed handling of Beer being played with maximum lifepoints
	  already.

2012-01-03  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ProxyCharacter.cs:
	  Fixed the Bang.Server.ProxyCharacter.HasCardEffect() method.

	* Player.cs:
	* CalamityJanet.cs:
	* ApacheKid.cs:
	* BelleStar.cs:
	* VeraCuster.cs:
	* ElenaFuente.cs:
	  Fixed OnUsedAbility reporting.

	* GameCycle.cs:
	* TableCard.cs:
	* Jail.cs:
	* Dynamite.cs:
	  Fixed predraw checks priority.

2012-01-01  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* SessionPlayer.cs: